# RascalC

./: .Project_Readme.kate-swp  ._grid_covariance.cpp  .gitignore  .grid_covariance.cpp.kate-swp  .make.swp  .parameters.h.swp  .readthedocs.yaml  11.26 Config  Corrfunc Setup.ipynb  LICENSE  Makefile  Makefile_mac  Project_Readme  QPM_D_ngc_rsd_fix3.xi  README.md  binfile_zero.csv  callgrind.out.22961  callgrind.out.3194  callgrind.out.3368  callgrind.out.742  callgrind.out.7648  callgrind.out.7726  clean  core  cov  cov.gprof  gmon.sum  gprof.output  grid.h  grid_covariance.cpp  grid_covariance.gcda  grid_covariance.gcno  grid_multipoles_threept.cpp  interface.py  pyproject.toml  radial_binfile_3pcf.csv  requirements.txt  setup.py  test_xi  threevector.hh  (+4 more)
.ipynb_checkpoints/: Corrfunc Setup-checkpoint.ipynb
CovMatrices/: RR_n10_m6.txt  RR_n5_m3.txt  c2_n10_m6.txt  c2_n5_m3.txt  c3_n10_m6.txt  c3_n5_m3.txt  c4_n10_m6.txt  c4_n5_m3.txt
CovMatricesAll/: RR_n10_m6_0.txt  RR_n10_m6_1.txt  RR_n10_m6_10.txt  RR_n10_m6_100.txt  RR_n10_m6_101.txt  RR_n10_m6_102.txt  RR_n10_m6_103.txt  RR_n10_m6_104.txt  RR_n10_m6_105.txt  RR_n10_m6_106.txt  RR_n10_m6_107.txt  RR_n10_m6_108.txt  RR_n10_m6_109.txt  RR_n10_m6_11.txt  RR_n10_m6_110.txt  RR_n10_m6_111.txt  RR_n10_m6_112.txt  RR_n10_m6_113.txt  RR_n10_m6_114.txt  RR_n10_m6_115.txt  RR_n10_m6_116.txt  RR_n10_m6_117.txt  RR_n10_m6_118.txt  RR_n10_m6_119.txt  RR_n10_m6_12.txt  RR_n10_m6_120.txt  RR_n10_m6_121.txt  RR_n10_m6_122.txt  RR_n10_m6_123.txt  RR_n10_m6_124.txt  RR_n10_m6_125.txt  RR_n10_m6_126.txt  RR_n10_m6_127.txt  RR_n10_m6_128.txt  RR_n10_m6_129.txt  RR_n10_m6_13.txt  RR_n10_m6_130.txt  RR_n10_m6_131.txt  RR_n10_m6_132.txt  RR_n10_m6_133.txt  (+1168 more)
CovMatricesJack/: c2j_n10_m6_full.txt  c3j_n10_m6_full.txt  c4j_n10_m6_full.txt
(+746 files in other folders)
